Fixed catalogue overlapping issues

--- a/components/styles/products-component.css
+++ b/components/styles/products-component.css
@@ -48,14 +48,14 @@
 
 .products-component-container {
   gap: var(--dl-space-space-fiveunits);
-  flex: 0 0 auto;
   width: 85%;
-  height: 1040px;
+  height: 95%;
   margin: var(--dl-space-space-threeunits);
   display: flex;
   position: relative;
   flex-wrap: wrap;
-  align-items: flex-start;
+  align-items: center;
+  flex-shrink: 0;
   justify-content: center;
 }
 .products-component-root-class-name {
