--- a/styles/catalogue.css
+++ b/styles/catalogue.css
@@ -78,10 +78,12 @@
   flex-direction: column;
 }
 .catalogue-catalogue {
-  gap: 71px;
+  gap: 66px;
   width: 100%;
-  height: 2091px;
+  height: auto;
   display: flex;
+  overflow: hidden;
+  position: relative;
   align-items: center;
   flex-shrink: 0;
   flex-direction: column;
@@ -105,8 +107,8 @@
 }
 .catalogue-pagination {
   gap: 8px;
-  width: 20%;
-  height: 2%;
+  width: 347px;
+  height: 50px;
   display: flex;
   padding: 8px;
   flex-wrap: wrap;
